--- a/_sass/layout/_project.scss
+++ b/_sass/layout/_project.scss
@@ -39,8 +39,6 @@
       display: flex;
       // width: 100%;
       background-color: _palette(fg-light);
-
-      img {}
     }
   }
 }
